--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.6",
+        "doctrine/collections": "~1.3",
         "novuso/common": "~0.1",
         "novuso/system": "~0.1",
         "symfony/console": "~2.7",
